change float64 -> float32

--- a/spectrogram_channels_U-net.ipynb
+++ b/spectrogram_channels_U-net.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "# Training Flags (hyperparameter configuration)\n",
-    "model_name = 'spectrogram_unet'\n",
+    "model_name = 'spectrogram_channels_unet'\n",
     "train_dir = 'train/' + model_name + '/exp1/'\n",
     "max_epochs = 200\n",
     "save_model_epochs = 20\n",
@@ -111,8 +111,7 @@
     "  \n",
     "  parsed_features = tf.io.parse_single_example(example_proto, features)\n",
     "\n",
-    "  wav_concat = tf.io.decode_raw(parsed_features[\"wav_concat\"], out_type=tf.float64)\n",
-    "  wav_concat = tf.cast(wav_concat, dtype=tf.float32)\n",
+    "  wav_concat = tf.io.decode_raw(parsed_features[\"wav_concat\"], out_type=tf.float32)\n",
     "  time_step = tf.cast(parsed_features[\"time_step\"], dtype=tf.int32)\n",
     "  #track_number = tf.cast(parsed_features[\"track_number\"], dtype=tf.int32)\n",
     "  #split_number = tf.cast(parsed_features[\"split_number\"], dtype=tf.int32)\n",
