change result of stft complex -> real)

--- a/spectrogram_channels_U-net.ipynb
+++ b/spectrogram_channels_U-net.ipynb
@@ -177,11 +177,12 @@
     "      \n",
     "  stfts = []\n",
     "  for key, wav in wav_to_wanted.items():\n",
-    "    stfts.append(tf.signal.stft(wav,\n",
-    "                                frame_length=2048,\n",
-    "                                frame_step=512,\n",
-    "                                fft_length=2048,\n",
-    "                                pad_end=True))\n",
+    "    stft = tf.math.real(tf.signal.stft(wav,\n",
+    "                                       frame_length=2048,\n",
+    "                                       frame_step=512,\n",
+    "                                       fft_length=2048,\n",
+    "                                       pad_end=True)[..., :1024])\n",
+    "    stfts.append(stft)\n",
     "\n",
     "  return stfts[0], tf.concat(stfts[1:], axis=0)"
    ]
@@ -234,13 +235,15 @@
     "    self.conv1 = layers.Conv2D(filters=num_filters,\n",
     "                               kernel_size=(size, size),\n",
     "                               padding='same',\n",
+    "                               data_format='channels_first',\n",
     "                               use_bias=False)\n",
-    "    self.batchnorm1 = layers.BatchNormalization()\n",
+    "    self.batchnorm1 = layers.BatchNormalization(axis=1)\n",
     "    self.conv2 = layers.Conv2D(filters=num_filters,\n",
     "                               kernel_size=(size, size),\n",
     "                               padding='same',\n",
+    "                               data_format='channels_first',\n",
     "                               use_bias=False)\n",
-    "    self.batchnorm2 = layers.BatchNormalization()\n",
+    "    self.batchnorm2 = layers.BatchNormalization(axis=1)\n",
     "  \n",
     "  def call(self, x, training=True):\n",
     "    x = self.conv1(x)\n",
@@ -266,7 +269,9 @@
     "    \n",
     "  def call(self, x, training=True):\n",
     "    encoder = self.conv_block(x, training=training)\n",
-    "    encoder_pool = layers.MaxPooling2D((2, 2), strides=(2, 2))(encoder)\n",
+    "    encoder_pool = layers.MaxPooling2D(pool_size=(2, 2),\n",
+    "                                       strides=(2, 2),\n",
+    "                                       data_format='channels_first')(encoder)\n",
     "  \n",
     "    return encoder_pool, encoder"
    ]
@@ -283,13 +288,15 @@
     "    self.convT1 = layers.Conv2DTranspose(filters=num_filters,\n",
     "                                         kernel_size=(size, size),\n",
     "                                         padding='same',\n",
+    "                                         data_format='channels_first',\n",
     "                                         use_bias=False)\n",
-    "    self.batchnorm1 = layers.BatchNormalization()\n",
+    "    self.batchnorm1 = layers.BatchNormalization(axis=1)\n",
     "    self.convT2 = layers.Conv2DTranspose(filters=num_filters,\n",
     "                                         kernel_size=(size, size),\n",
     "                                         padding='same',\n",
+    "                                         data_format='channels_first',\n",
     "                                         use_bias=False)\n",
-    "    self.batchnorm2 = layers.BatchNormalization()\n",
+    "    self.batchnorm2 = layers.BatchNormalization(axis=1)\n",
     "  \n",
     "  def call(self, x, training=True):\n",
     "    x = self.convT1(x)\n",
@@ -315,8 +322,9 @@
     "                                        kernel_size=(size+2, size+2),\n",
     "                                        strides=(2, 2),\n",
     "                                        padding='same',\n",
+    "                                        data_format='channels_first',\n",
     "                                        use_bias=False)\n",
-    "    self.batchnorm = layers.BatchNormalization()\n",
+    "    self.batchnorm = layers.BatchNormalization(axis=1)\n",
     "    self.dropout = layers.Dropout(0.4)\n",
     "    self.convT_block = ConvTransposeBlock(num_filters, size)\n",
     "  \n",
@@ -358,9 +366,9 @@
     "\n",
     "    self.last = layers.Conv2D(filters=5,\n",
     "                              kernel_size=(1, 1),\n",
-    "                              padding='same')\n",
+    "                              padding='same',\n",
+    "                              data_format='channels_first')\n",
     "  \n",
-    "  @tf.contrib.eager.defun\n",
     "  def call(self, x, training):\n",
     "    # x shape == (bs, 1024, 256, 1)\n",
     "    x1_pool, x1 = self.down1(x, training=training) # (bs, 512, 128, 32)\n",
@@ -387,17 +395,6 @@
    "outputs": [],
    "source": [
     "model = SpectrogramChannelsUNet()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for inputs, targets in train_dataset.take(1):\n",
-    "  x = model(inputs, training=True)\n",
-    "  y = targets"
    ]
   },
   {
