upload spectrogram_channels_U-net 1st complete version

--- a/spectrogram_channels_U-net.ipynb
+++ b/spectrogram_channels_U-net.ipynb
@@ -7,7 +7,9 @@
     "# Spectrogram Channels U-net\n",
     "\n",
     "* Spectrogram-Channels U-Net: A Source Separation Model Viewing Each Channel as the Spectrogram of Each Source, [arXiv:1810.11520](https://arxiv.org/abs/1810.11520)\n",
-    "  * Jaehoon Oh∗, Duyeon Kim∗, Se-Young Yun"
+    "  * Jaehoon Oh∗, Duyeon Kim∗, Se-Young Yun\n",
+    "  \n",
+    "* Implemented by `TensorFlow v2.0`"
    ]
   },
   {
@@ -44,9 +46,6 @@
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers\n",
-    "#tf.enable_eager_execution()\n",
-    "\n",
-    "#tf.logging.set_verbosity(tf.logging.INFO)\n",
     "\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\""
    ]
@@ -60,11 +59,11 @@
     "# Training Flags (hyperparameter configuration)\n",
     "model_name = 'spectrogram_channels_unet'\n",
     "train_dir = 'train/' + model_name + '/exp1/'\n",
-    "max_epochs = 200\n",
+    "max_epochs = 20\n",
     "save_model_epochs = 20\n",
     "print_steps = 1\n",
-    "batch_size = 4\n",
-    "learning_rate = 2e-4\n",
+    "batch_size = 8\n",
+    "learning_rate = 1e-3\n",
     "N = 10000 # about number of samples in train_dataset\n",
     "\n",
     "BUFFER_SIZE = N"
@@ -182,9 +181,12 @@
     "                                       frame_step=512,\n",
     "                                       fft_length=2048,\n",
     "                                       pad_end=True)[..., :1024])\n",
+    "    # [num_channels, num_frames, frequency_bin]\n",
+    "    # -> [num_frames, frequency_bin, num_channels]\n",
+    "    stft = tf.transpose(stft, perm=[1, 2, 0])\n",
     "    stfts.append(stft)\n",
     "\n",
-    "  return stfts[0], tf.concat(stfts[1:], axis=0)"
+    "  return stfts[0], tf.concat(stfts[1:], axis=-1)"
    ]
   },
   {
@@ -235,15 +237,13 @@
     "    self.conv1 = layers.Conv2D(filters=num_filters,\n",
     "                               kernel_size=(size, size),\n",
     "                               padding='same',\n",
-    "                               data_format='channels_first',\n",
     "                               use_bias=False)\n",
-    "    self.batchnorm1 = layers.BatchNormalization(axis=1)\n",
+    "    self.batchnorm1 = layers.BatchNormalization()\n",
     "    self.conv2 = layers.Conv2D(filters=num_filters,\n",
     "                               kernel_size=(size, size),\n",
     "                               padding='same',\n",
-    "                               data_format='channels_first',\n",
     "                               use_bias=False)\n",
-    "    self.batchnorm2 = layers.BatchNormalization(axis=1)\n",
+    "    self.batchnorm2 = layers.BatchNormalization()\n",
     "  \n",
     "  def call(self, x, training=True):\n",
     "    x = self.conv1(x)\n",
@@ -270,8 +270,7 @@
     "  def call(self, x, training=True):\n",
     "    encoder = self.conv_block(x, training=training)\n",
     "    encoder_pool = layers.MaxPooling2D(pool_size=(2, 2),\n",
-    "                                       strides=(2, 2),\n",
-    "                                       data_format='channels_first')(encoder)\n",
+    "                                       strides=(2, 2))(encoder)\n",
     "  \n",
     "    return encoder_pool, encoder"
    ]
@@ -288,15 +287,13 @@
     "    self.convT1 = layers.Conv2DTranspose(filters=num_filters,\n",
     "                                         kernel_size=(size, size),\n",
     "                                         padding='same',\n",
-    "                                         data_format='channels_first',\n",
     "                                         use_bias=False)\n",
-    "    self.batchnorm1 = layers.BatchNormalization(axis=1)\n",
+    "    self.batchnorm1 = layers.BatchNormalization()\n",
     "    self.convT2 = layers.Conv2DTranspose(filters=num_filters,\n",
     "                                         kernel_size=(size, size),\n",
     "                                         padding='same',\n",
-    "                                         data_format='channels_first',\n",
     "                                         use_bias=False)\n",
-    "    self.batchnorm2 = layers.BatchNormalization(axis=1)\n",
+    "    self.batchnorm2 = layers.BatchNormalization()\n",
     "  \n",
     "  def call(self, x, training=True):\n",
     "    x = self.convT1(x)\n",
@@ -322,9 +319,8 @@
     "                                        kernel_size=(size+2, size+2),\n",
     "                                        strides=(2, 2),\n",
     "                                        padding='same',\n",
-    "                                        data_format='channels_first',\n",
     "                                        use_bias=False)\n",
-    "    self.batchnorm = layers.BatchNormalization(axis=1)\n",
+    "    self.batchnorm = layers.BatchNormalization()\n",
     "    self.dropout = layers.Dropout(0.4)\n",
     "    self.convT_block = ConvTransposeBlock(num_filters, size)\n",
     "  \n",
@@ -364,10 +360,9 @@
     "    self.up3 = DecoderBlock(64, 3)\n",
     "    self.up4 = DecoderBlock(32, 3)\n",
     "\n",
-    "    self.last = layers.Conv2D(filters=5,\n",
+    "    self.last = layers.Conv2D(filters=4,\n",
     "                              kernel_size=(1, 1),\n",
-    "                              padding='same',\n",
-    "                              data_format='channels_first')\n",
+    "                              padding='same')\n",
     "  \n",
     "  def call(self, x, training):\n",
     "    # x shape == (bs, 1024, 256, 1)\n",
@@ -403,6 +398,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# To fetch inputs to model in order to set to input shape\n",
+    "for mixtures, targets in train_dataset.take(1):\n",
+    "  predictions = model(mixtures, training=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model.summary()"
    ]
   },
@@ -419,10 +425,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bce_loss(y_true, y_pred):\n",
-    "  loss = tf.keras.losses.binary_crossentropy(y_true, y_pred)\n",
-    "  loss = tf.reduce_mean(loss)\n",
-    "  return loss"
+    "def singing_voice_loss(y_true, y_pred, alpha=1.0):\n",
+    "  # Use the mean_absolute_error\n",
+    "  mae = tf.keras.losses.MeanAbsoluteError()\n",
+    "  loss_vocal = mae(y_true[..., :2], y_pred[..., :2])\n",
+    "  loss_accompaniments = mae(y_true[..., 2:], y_pred[..., 2:])\n",
+    "  \n",
+    "  return alpha * loss_vocal + (1. - alpha) * loss_accompaniments"
    ]
   },
   {
@@ -431,7 +440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = tf.train.AdamOptimizer(learning_rate)"
+    "optimizer = tf.keras.optimizers.Adam(learning_rate)"
    ]
   },
   {
@@ -441,8 +450,8 @@
    "outputs": [],
    "source": [
     "checkpoint_dir = train_dir\n",
-    "if not tf.gfile.Exists(checkpoint_dir):\n",
-    "  tf.gfile.MakeDirs(checkpoint_dir)\n",
+    "if not tf.io.gfile.exists(checkpoint_dir):\n",
+    "  tf.io.gfile.makedirs(checkpoint_dir)\n",
     "checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt\")\n",
     "checkpoint = tf.train.Checkpoint(optimizer=optimizer, model=model)"
    ]
@@ -453,8 +462,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf.logging.info('Start Training.')\n",
-    "global_step = tf.train.get_or_create_global_step()\n",
+    "print('Start Training.')\n",
+    "global_step = 1\n",
+    "\n",
     "for epoch in range(max_epochs):\n",
     "  \n",
     "  for mixtures, targets in train_dataset:\n",
@@ -462,39 +472,26 @@
     "    \n",
     "    with tf.GradientTape() as tape:\n",
     "      predictions = model(mixtures, training=True)\n",
-    "      loss = bce_loss(targets, predictions)\n",
+    "      loss = singing_voice_loss(targets, predictions)\n",
     "\n",
     "    gradients = tape.gradient(loss, model.variables)\n",
-    "    optimizer.apply_gradients(zip(gradients, model.variables), global_step=global_step)\n",
+    "    optimizer.apply_gradients(zip(gradients, model.variables))\n",
     "        \n",
-    "    epochs = global_step.numpy() * batch_size / float(N)\n",
+    "    epochs = global_step * batch_size / float(N)\n",
     "    duration = time.time() - start_time\n",
     "\n",
-    "    if global_step.numpy() % print_steps == 0:\n",
+    "    if global_step % print_steps == 0:\n",
     "      display.clear_output(wait=True)\n",
     "      examples_per_sec = batch_size / float(duration)\n",
     "      print(\"Epochs: {:.2f} global_step: {} loss: {:.3f} ({:.2f} examples/sec; {:.3f} sec/batch)\".format(\n",
-    "                epochs, global_step.numpy(), loss, examples_per_sec, duration))\n",
-    "      # generate sample image from random test image\n",
-    "      # the training=True is intentional here since\n",
-    "      # we want the batch statistics while running the model\n",
-    "      # on the test dataset. If we use training=False, we will get \n",
-    "      # the accumulated statistics learned from the training dataset\n",
-    "      # (which we don't want)\n",
-    "      #for test_input, test_target in test_dataset.take(1):\n",
-    "      #  prediction = generator(test_input, training=True)\n",
-    "      #  print_or_save_sample_images(test_input, test_target, prediction)\n",
+    "                epochs, global_step, loss, examples_per_sec, duration))\n",
+    "      #for test_mixtures, test_targets in test_dataset.take(1):\n",
+    "      #  prediction = model(test_mixtures, training=False)\n",
+    "    global_step = global_step + 1\n",
     "\n",
-    "#   if (epoch + 1) % save_images_epochs == 0:\n",
-    "#     display.clear_output(wait=True)\n",
-    "#     print(\"This images are saved at {} epoch\".format(epoch+1))\n",
-    "#     prediction = generator(constant_test_input, training=True)\n",
-    "#     print_or_save_sample_images(constant_test_input, constant_test_target, prediction,\n",
-    "#                                 is_save=True, epoch=epoch+1, checkpoint_dir=checkpoint_dir)\n",
-    "\n",
-    "#   # saving (checkpoint) the model every save_epochs\n",
-    "#   if (epoch + 1) % save_model_epochs == 0:\n",
-    "#     checkpoint.save(file_prefix = checkpoint_prefix)"
+    "  # saving (checkpoint) the model every save_epochs\n",
+    "  if (epoch + 1) % save_model_epochs == 0:\n",
+    "    checkpoint.save(file_prefix=checkpoint_prefix)"
    ]
   },
   {
