--- a/spectrogram_channels_U-net.ipynb
+++ b/spectrogram_channels_U-net.ipynb
@@ -40,12 +40,15 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "import PIL\n",
-    "import imageio\n",
+    "import librosa\n",
+    "import librosa.display\n",
+    "\n",
     "from IPython import display\n",
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers\n",
+    "\n",
+    "tf.enable_eager_execution()\n",
     "\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\""
    ]
@@ -64,7 +67,8 @@
     "print_steps = 1\n",
     "batch_size = 8\n",
     "learning_rate = 1e-3\n",
-    "N = 10000 # about number of samples in train_dataset\n",
+    "# Total number of samples in train_dataset\n",
+    "N = 4525 # N_test = 2469 for test_dataset\n",
     "\n",
     "BUFFER_SIZE = N"
    ]
@@ -87,11 +91,12 @@
     "                        for name in os.listdir(os.path.join(data_path, 'train')) if 'tfrecord' in name]\n",
     "for name in train_data_filenames:\n",
     "  print(name)\n",
-    "\n",
-    "#test_data_filenames = [os.path.join(data_path, 'train', name)\n",
-    "#                       for name in os.listdir(os.path.join(data_path, 'test')) if 'tfrecord' in name]\n",
-    "#for name in   print(nametest_data_filenames:\n",
-    "#  print(name)"
+    "print('--------')\n",
+    "  \n",
+    "test_data_filenames = [os.path.join(data_path, 'test', name)\n",
+    "                       for name in os.listdir(os.path.join(data_path, 'test')) if 'tfrecord' in name]\n",
+    "for name in test_data_filenames:\n",
+    "  print(name)"
    ]
   },
   {
@@ -174,19 +179,89 @@
     "    if key in sources_to_wanted:\n",
     "      wav_to_wanted[key] = wav[value]  \n",
     "      \n",
-    "  stfts = []\n",
+    "  stfts_db = []\n",
     "  for key, wav in wav_to_wanted.items():\n",
-    "    stft = tf.math.real(tf.signal.stft(wav,\n",
-    "                                       frame_length=2048,\n",
-    "                                       frame_step=512,\n",
-    "                                       fft_length=2048,\n",
-    "                                       pad_end=True)[..., :1024])\n",
+    "    stft = tf.contrib.signal.stft(wav,\n",
+    "                          frame_length=2048,\n",
+    "                          frame_step=512,\n",
+    "                          fft_length=2048,\n",
+    "                          pad_end=True)[..., :1024]\n",
+    "    \n",
     "    # [num_channels, num_frames, frequency_bin]\n",
     "    # -> [num_frames, frequency_bin, num_channels]\n",
     "    stft = tf.transpose(stft, perm=[1, 2, 0])\n",
-    "    stfts.append(stft)\n",
     "\n",
-    "  return stfts[0], tf.concat(stfts[1:], axis=-1)"
+    "    def _amp_to_db(x):\n",
+    "      log_offset = 1e-6\n",
+    "      return 20 * tf.math.log(x + log_offset) / tf.math.log(10.0) # natural logarithm -> logarithm based on 10\n",
+    "    # for our suggestion\n",
+    "    min_level_db = -110\n",
+    "    ref_level_db = 40\n",
+    "    stft_db = _amp_to_db(tf.math.abs(stft)) - ref_level_db\n",
+    "    stfts_db.append(stft_db)\n",
+    "\n",
+    "  return stfts_db[0], tf.concat(stfts_db[1:], axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _stft_for_test(wav, sources_to_wanted):\n",
+    "  \"\"\"Short time Fourier Transform\n",
+    "  \n",
+    "  Args:\n",
+    "    wav: Tens\n",
+    "    sources_to_wanted: list of name of sources to wanted\n",
+    "        - full source names: ['vocals', 'drums', 'basses', 'others', 'accompaniments']\n",
+    "        \n",
+    "  Returns:\n",
+    "    mixture_stft: The real part of stft of input wav\n",
+    "    targets_stft: The real part of stft of target (each source) wav\n",
+    "    targets_stft_imag: The imaginary part of stft of target (each source) wav\n",
+    "  \"\"\"\n",
+    "  num = collections.OrderedDict()\n",
+    "  num['vocals'] = 1\n",
+    "  num['drums'] = 2\n",
+    "  num['basses'] = 3\n",
+    "  num['others'] = 4\n",
+    "  num['accompaniments'] = 5\n",
+    "  \n",
+    "  wav_to_wanted = collections.OrderedDict()\n",
+    "  wav_to_wanted['mixtures'] = wav[0]\n",
+    "  for key, value in num.items():\n",
+    "    if key in sources_to_wanted:\n",
+    "      wav_to_wanted[key] = wav[value]  \n",
+    "      \n",
+    "  stfts_db = []\n",
+    "  stfts_angle = []\n",
+    "  for key, wav in wav_to_wanted.items():\n",
+    "    stft = tf.contrib.signal.stft(wav,\n",
+    "                          frame_length=2048,\n",
+    "                          frame_step=512,\n",
+    "                          fft_length=2048,\n",
+    "                          pad_end=True)[..., :1024]\n",
+    "    \n",
+    "    # [num_channels, num_frames, frequency_bin]\n",
+    "    # -> [num_frames, frequency_bin, num_channels]\n",
+    "    stft = tf.transpose(stft, perm=[1, 2, 0])\n",
+    "    \n",
+    "    # separate real part and imaginary part\n",
+    "    stft_angle = tf.math.angle(stft)\n",
+    "    stfts_angle.append(stft_angle)\n",
+    "    \n",
+    "    def _amp_to_db(x):\n",
+    "      log_offset = 1e-6\n",
+    "      return 20 * tf.math.log(x + log_offset) / tf.math.log(10.0) # natural logarithm -> logarithm based on 10\n",
+    "    # for our suggestion\n",
+    "    min_level_db = -110\n",
+    "    ref_level_db = 40\n",
+    "    stft_db = _amp_to_db(tf.math.abs(stft)) - ref_level_db\n",
+    "    stfts_db.append(stft_db)\n",
+    "\n",
+    "  return stfts_db[0], tf.concat(stfts_db[1:], axis=-1), tf.concat(stfts_angle[1:], axis=-1)"
    ]
   },
   {
@@ -215,6 +290,54 @@
     "  start_time = time.time()\n",
     "  print(mixtures.shape)\n",
     "  print(targets.shape)\n",
+    "  print(\"duration: {} sec\".format(time.time() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot for spectrogram of mixtures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(16, 4))\n",
+    "librosa.display.specshow(mixtures[0, :, :, 0].numpy().T)\n",
+    "plt.colorbar()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dataset = tf.data.TFRecordDataset(test_data_filenames)\n",
+    "test_dataset = test_dataset.map(_parse_function)\n",
+    "test_dataset = test_dataset.map(_augmentation_function)\n",
+    "extracted_sources_list = ['vocals', 'accompaniments']\n",
+    "test_dataset = test_dataset.map(lambda x: _stft_for_test(x, extracted_sources_list))\n",
+    "test_dataset = test_dataset.batch(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To test for batch\n",
+    "for mixtures, targets, targets_imaginary in test_dataset.take(3):\n",
+    "  start_time = time.time()\n",
+    "  print(mixtures.shape)\n",
+    "  print(targets.shape)\n",
+    "  print(targets_imaginary.shape)\n",
     "  print(\"duration: {} sec\".format(time.time() - start_time))"
    ]
   },
@@ -427,9 +550,12 @@
    "source": [
     "def singing_voice_loss(y_true, y_pred, alpha=1.0):\n",
     "  # Use the mean_absolute_error\n",
-    "  mae = tf.keras.losses.MeanAbsoluteError()\n",
-    "  loss_vocal = mae(y_true[..., :2], y_pred[..., :2])\n",
-    "  loss_accompaniments = mae(y_true[..., 2:], y_pred[..., 2:])\n",
+    "  #mae = tf.keras.losses.MeanAbsoluteError()\n",
+    "  #loss_vocal = mae(y_true[..., :2], y_pred[..., :2])\n",
+    "  #loss_accompaniments = mae(y_true[..., 2:], y_pred[..., 2:])\n",
+    "  \n",
+    "  loss_vocal = tf.losses.absolute_difference(y_true[..., :2], y_pred[..., :2])\n",
+    "  loss_accompaniments = tf.losses.absolute_difference(y_true[..., 2:], y_pred[..., 2:])\n",
     "  \n",
     "  return alpha * loss_vocal + (1. - alpha) * loss_accompaniments"
    ]
@@ -440,7 +566,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = tf.keras.optimizers.Adam(learning_rate)"
+    "#optimizer = tf.keras.optimizers.Adam(learning_rate)\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate)"
    ]
   },
   {
@@ -450,10 +577,49 @@
    "outputs": [],
    "source": [
     "checkpoint_dir = train_dir\n",
-    "if not tf.io.gfile.exists(checkpoint_dir):\n",
-    "  tf.io.gfile.makedirs(checkpoint_dir)\n",
+    "#if not tf.io.gfile.exists(checkpoint_dir):\n",
+    "#  tf.io.gfile.makedirs(checkpoint_dir)\n",
+    "if not tf.gfile.Exists(checkpoint_dir):\n",
+    "  tf.gfile.MakeDirs(checkpoint_dir)\n",
     "checkpoint_prefix = os.path.join(checkpoint_dir, \"ckpt\")\n",
     "checkpoint = tf.train.Checkpoint(optimizer=optimizer, model=model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inverse_stft(test_predictions, test_targets_angle):\n",
+    "  target_shape = test_predictions.shape\n",
+    "  zero_padding = tf.zeros(shape=[target_shape[0], target_shape[1], 1, target_shape[3]])\n",
+    "  pred = tf.concat([test_predictions, zero_padding], axis=2)\n",
+    "  angle = tf.concat([test_targets_angle, zero_padding], axis=2)\n",
+    "  \n",
+    "  def _db_to_amp(x):\n",
+    "    return tf.math.pow(10.0, x * 0.05)\n",
+    "\n",
+    "  ref_level_db = 40\n",
+    "  magnitude = _db_to_amp(pred + ref_level_db)\n",
+    "  \n",
+    "  magnitude_complex = tf.dtypes.complex(magnitude, 0.)\n",
+    "  angle_complex = tf.dtypes.complex(0., angle)\n",
+    "  \n",
+    "  stfts = magnitude_complex * angle_complex\n",
+    "  \n",
+    "  # [batch_size, num_frames, frequency_bin, num_channels]\n",
+    "  # -> [batch_size, num_channels, num_frames, frequency_bin]\n",
+    "  stfts = tf.transpose(stfts, perm=[0, 3, 1, 2])\n",
+    "  \n",
+    "  inv_stfts = tf.contrib.signal.inverse_stft(stfts=stfts,\n",
+    "                                     frame_length=2048,\n",
+    "                                     frame_step=512)#,\n",
+    "#                                     fft_length=2048)\n",
+    "\n",
+    "  #inv_stfts = librosa.core.istft(stft[0,0, :,:].numpy().T, hop_length=512, win_length=2048)\n",
+    "  \n",
+    "  return inv_stfts"
    ]
   },
   {
@@ -465,9 +631,10 @@
     "print('Start Training.')\n",
     "global_step = 1\n",
     "\n",
-    "for epoch in range(max_epochs):\n",
+    "#for epoch in range(max_epochs):\n",
+    "for epoch in range(1):\n",
     "  \n",
-    "  for mixtures, targets in train_dataset:\n",
+    "  for mixtures, targets in train_dataset.take(1):\n",
     "    start_time = time.time()\n",
     "    \n",
     "    with tf.GradientTape() as tape:\n",
@@ -485,13 +652,34 @@
     "      examples_per_sec = batch_size / float(duration)\n",
     "      print(\"Epochs: {:.2f} global_step: {} loss: {:.3f} ({:.2f} examples/sec; {:.3f} sec/batch)\".format(\n",
     "                epochs, global_step, loss, examples_per_sec, duration))\n",
-    "      #for test_mixtures, test_targets in test_dataset.take(1):\n",
-    "      #  prediction = model(test_mixtures, training=False)\n",
+    "      for test_mixtures, test_targets, test_targets_angle in test_dataset.take(1):\n",
+    "        test_predictions = model(test_mixtures, training=False)\n",
+    "        test_wav = inverse_stft(test_predictions, test_targets_angle)\n",
     "    global_step = global_step + 1\n",
     "\n",
     "  # saving (checkpoint) the model every save_epochs\n",
     "  if (epoch + 1) % save_model_epochs == 0:\n",
     "    checkpoint.save(file_prefix=checkpoint_prefix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for test_mixtures, test_targets, test_targets_angle in test_dataset.take(1):\n",
+    "  test_predictions = model(test_mixtures, training=False)\n",
+    "  test_wav = inverse_stft(test_predictions, test_targets_angle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display.Audio(test_wav[0, :2, :], rate=44100)"
    ]
   },
   {
@@ -528,9 +716,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
